Wed Jun 17 23:52:13 EDT 1998 Adrian Likins <adrian@gimp.org>

	* app/file_new_dialog.c: updated the spinbuttons
	to use the new api

	* app/gimprc.[ch]: added some stuff in preparation for
	making a preference

Thu Jun 18 00:56:41 MEST 1998 Sven Neumann <sven@gimp.org>

	* channels_dialog.c
	* layers_dialog.c: the middle mouse button now pops up the menu
	as well as the third when clicking on the layer/channel. This should
	help users that use a tablet and don't have a right mouse button.

Wed Jun 17 17:47:30 MEST 1998 Sven Neumann <sven@gimp.org>

	* app/preferences_dialog.c: fixed a bug I introduced with the 
	new mem_size_unit for the tile_cache_size 

Wed Jun 17 16:38:40 MEST 1998 Sven Neumann <sven@gimp.org>

	* app/channel.c
	* app/paint_funcs.c
	* app/paint_funcs.h: applied a patch from Jay Cox. 
	Reimplements selection_grow, selection_shrink, and selection_border 
	using new algorithms.

Wed Jun 17 12:07:44 MEST 1998 Sven Neumann <sven@gimp.org>

	* app/gimprc.c: default "save_window_positions_on_exit" to FALSE
	until I know why gdk_window_get_position() doesn't work properly
	when the window was never moved

Wed Jun 17 01:56:30 MEST 1998 Sven Neumann <sven@gimp.org>

	* app/app_procs.c
	* app/gimprc.c
	* app/gimprc.h
	* app/layers_dialog.c
	* app/interface.c
	* app/preferences_dialog.c: started to implement some sort of
	session-managment; right now it only saves a few window-positions.
	I plan to move the saving out of gimprc into a seperate rcfile

Tue Jun 16 15:06:19 CDT 1998 Larry Ewing <lewing@gimp.org>

	* app/interface.c:
	* app/menus.c: added menu entry and changed loop bounds to get the
	new ink tool functioning properly

	* app/tools.[ch]: added new and free funcs to the ToolInfo struct,
	and began small cleanup of tools

Mon Jun 15 12:42:43 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/plug_in.c: initialize progress_gdisp_ID field in
	plug_in_new so things don't crash

	* app/menus.c: use proper keycodes (?) for zoom accelerator
	defaults
