@@ -1,3 +1,8 @@
+Thu Jun 18 16:11:19 MEST 1998 Sven Neumann <sven@gimp.org>
+
+	* app/preferences_dialog.c: fiddled with the spinbuttons
+	* app/file_new_dialog.c: removed two warnings
+
 Wed Jun 17 23:52:13 EDT 1998 Adrian Likins <adrian@gimp.org>
 
 	* app/file_new_dialog.c: updated the spinbuttons
